Reach the breadth family, and say why one of the fifteen stays out (#78)
Fifteen indicators read a `CrossSection` — the whole tracked universe on one
tick, not one market. They were skipped as needing "a market-wide breadth feed
this repository has no source for". That was wrong, and finding out why is most
of this change: `wickra-exchange-core` already ships the conversion, and
everything a member is assembled from is already folded here, one bar at a time,
per symbol.

**461 → 475.** Fourteen of the fifteen; the exclusion is deliberate and below.

### What each market now keeps

The close-to-close change, the bar's volume, whether it set a session extreme,
and whether its close sits above a fifty-bar reference average — folded once per
**closed bar**, never per tick. Fed per tick, the same symbol would count as
advancing and declining several times inside one bar and `AdvanceDecline` would
report noise.

### Where the universe is assembled

Exactly where and why the pairwise references are: before any market is
borrowed, because assembling it walks every market. What differs is *who is
asked*. A reference is a field on the spec and readable without the registry;
nothing in a spec says a kind reads breadth, so the registry now says so, as
`is_cross_section`.

The timestamp comes off the event being folded rather than a counter of the
terminal's own — the feed carries the real answer and the family orders its
history by it.

A market that has not closed a bar is left out rather than entered as unchanged.
Entering it would count it as neither advancing nor declining and drag every
ratio toward the middle while the terminal warms up — the same call
`reference_prices` makes for a market that has not printed.

### The one that is not registered

`BullishPercentIndex` reads whether each symbol sits on a point-and-figure BUY
signal. That needs P&F column state per symbol — box size, reversal, the column
history a breakout is judged against — which this terminal does not k